<resources>
    <string name="app_name">Exam</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="save_logcat">Save logcat</string>
    <string name="error">Error</string>
    <string name="dialog_ok">ОК</string>
    <string name="error_default">Unknown error</string>
    <string name="contactId">contact #%1$s</string>
    <string name="noId">contact #no Id</string>
    <string name="e_mail">E-mail:</string>
    <string name="web">Web:</string>
    <string name="phone">Phone:</string>
    <string name="city">City:</string>
    <string name="save_to_db">Save to DB</string>
</resources>