<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.userFragment.UserFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/custom_toolbar"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|end"
            android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:gravity="end"
            android:layout_marginEnd="@dimen/margin_10_dp"
            android:textSize="@dimen/text_size_21sp"
            android:id="@+id/userId" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/postId"
        android:textSize="40sp"
        android:padding="20dp"
        android:background="@color/grey"
        android:textColor="@color/white"
        android:layout_marginTop="58dp"
        android:layout_marginStart="@dimen/margin_10_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userName"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="58dp"
        android:text="sdfsdfdsf"
        android:layout_marginStart="@dimen/margin_10_dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/postId"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nickname"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="sadfsags"
        android:layout_marginStart="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/userName"
        app:layout_constraintStart_toEndOf="@id/postId"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/email"
        android:textSize="20sp"
        android:text="@string/e_mail"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:layout_marginStart="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/postId"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userEmail"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintStart_toStartOf="@id/email"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/web"
        android:textSize="20sp"
        android:text="@string/web"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:layout_marginStart="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/userEmail"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userWeb"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/web"
        app:layout_constraintStart_toStartOf="@id/email"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/phone"
        android:textSize="20sp"
        android:text="@string/phone"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:layout_marginStart="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/userWeb"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userPhone"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/phone"
        app:layout_constraintStart_toStartOf="@id/email"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/city"
        android:textSize="20sp"
        android:text="@string/city"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10_dp"
        android:layout_marginStart="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/userPhone"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/userCity"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginTop="@dimen/margin_10_dp"
        app:layout_constraintTop_toBottomOf="@id/city"
        app:layout_constraintStart_toStartOf="@id/email"/>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_save_db"
        android:text="@string/save_to_db"
        android:layout_margin="@dimen/margin_10_dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ProgressBar
        android:id="@+id/progressBarUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>